kubernetes/apps/files/copyparty/service.yaml
---
# yaml-language-server: $schema=https://raw.githubusercontent.com/yannh/kubernetes-json-schema/master/master-standalone-strict/service.json
apiVersion: v1
kind: Service
metadata:
  name: files-copyparty
spec:
  ports:
    - port: 3923
